# SRKDP

./: .env.example  .gitignore  procfile  pyproject.toml  railway.toml  requirements.txt  verify_dashboard_api.py
apps/assessments/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/assessments/management/commands/: cr_class.py  setup_assessments.py
apps/assessments/migrations/: 0001_initial.py  0002_academicyear_remove_bulkuploadjob_uploaded_by_and_more.py
apps/assessments/templates/assessments/: marks_entry_sheet.html
apps/attendance/: admin.py  api_views.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
apps/attendance/migrations/: 0001_initial.py  0002_initial.py  0003_attendancesession_attendancerecord_delete_attendance.py
apps/dashboard/: urls.py  views.py
apps/fees/: models.py  urls.py  views.py
apps/fees/migrations/: 0001_initial.py  0002_studentfee_balance_amount_studentfee_total_amount_and_more.py
apps/notifications/: models.py  urls.py  views.py
apps/students/: admin.py  models.py  views.py
apps/students/migrations/: 0001_initial.py  0002_initial.py  0003_class_class_group.py
apps/teachers/: admin.py  models.py  serializers.py  urls.py  views.py
apps/teachers/migrations/: 0001_initial.py  0002_initial.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/admin/: base.html  csv_import.html
templates/attendance/: class_students.html  dashboard.html  student_calendar.html
