[project]
name = "school-saas"
version = "0.1.0"
description = ""
authors = [
    {name = "Rohithprox",email = "130915955+Rohithprox@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.3.0,<6.0.0)",
    "django-cors-headers (>=4.3.0,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "gunicorn (>=21.2.0,<22.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"
